--- a/src/index.css
+++ b/src/index.css
@@ -108,9 +108,12 @@ section {
 }
 
 body {
-
 	overflow: hidden;
 	line-height: 1;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 
 ol,
